--- a/Aufgabe2/Aufgabe2.css
+++ b/Aufgabe2/Aufgabe2.css
@@ -1,1 +1,48 @@
-@charset "ISO-8859-1";
+@charset "UTF-8";
+
+body{
+	font-family: "Roboto", "sans-serif";
+}
+
+#scoreboard{
+	position: fixed;
+	right: 0;
+	top: 0;
+	width: 20%;
+	height: 100%;
+	background-color: lightgray;	
+}
+
+h2{
+	text-align: center;
+	
+}
+
+/* Memory */
+#game{
+	width: 80%;
+	height: auto; 
+}
+
+.card{
+	width: 18%;
+	height: auto;
+	background-color: lightgray;
+	float: left;
+	text-align: center;
+	line-height: 193px;
+	margin: 1%;
+}
+
+.open{
+	background-color: red;
+}
+
+.taken{
+	background-color: white;
+	color: white;
+}
+
+.hidden{
+	background-color: black;
+}
