--- a/Aufgabe2/Aufgabe2.css
+++ b/Aufgabe2/Aufgabe2.css
@@ -2,6 +2,7 @@
 
 body{
 	font-family: "Roboto", "sans-serif";
+	background-color: gray;
 }
 
 #scoreboard{
@@ -15,6 +16,18 @@ body{
 
 h2{
 	text-align: center;
+	font-size: 2em;
+	
+}
+
+/* Scoreboard */
+
+#scoreboard div{
+	margin: auto;
+	text-align: center;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	font-size: 1.25em;
 	
 }
 
@@ -24,14 +37,22 @@ h2{
 	height: auto; 
 }
 
-.card{
-	width: 18%;
+#mittig{
 	height: auto;
-	background-color: lightgray;
-	float: left;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.card{
+	height: 250px;
+  	width: 250px;
+	border-radius: 10px;
+	margin: 0px 25px 25px 0px;
 	text-align: center;
-	line-height: 193px;
-	margin: 1%;
+	line-height: 250px;
+	font-size: 5em;
 }
 
 .open{
@@ -46,3 +67,4 @@ h2{
 .hidden{
 	background-color: black;
 }
+
