--- a/Aufgabe2/Aufgabe2.css
+++ b/Aufgabe2/Aufgabe2.css
@@ -37,7 +37,7 @@ h2{
 	height: auto; 
 }
 
-#mittig{
+#playerbox{
 	height: auto;
 	width: 100%;
 	display: flex;
@@ -45,6 +45,7 @@ h2{
 	flex-wrap: wrap;
 }
 
+/* Kartenstyle */
 .card{
 	height: 250px;
   	width: 250px;
@@ -55,6 +56,7 @@ h2{
 	font-size: 5em;
 }
 
+/* Kartenstati */
 .open{
 	background-color: red;
 }
@@ -66,5 +68,6 @@ h2{
 
 .hidden{
 	background-color: black;
+	cursor: pointer;
 }
 
